can delete and modify events. solved a bug about cf. Considering the idea of using Svelte

--- a/assets/html/events.html
+++ b/assets/html/events.html
@@ -177,7 +177,7 @@
                             <div class="toast-body">
                                 <p class="fs-4">Confermi di voler eliminare l'evento?</p>
                                 <div class="mt-2 pt-2 border-top">
-                                    <a id="del-event" href="users.html" class="btn btn-danger btn-lg">Elimina</a>
+                                    <a id="del-event" href="events.html" class="btn btn-danger btn-lg">Elimina</a>
                                     <button type="button" class="btn btn-primary btn-lg" data-bs-dismiss="toast">Chiudi</button>
                                 </div>
                             </div>
