implemented the use of modal instead of toasts for the forms. home view done and added the status field for the users.

--- a/assets/html/events.html
+++ b/assets/html/events.html
@@ -167,7 +167,7 @@
                         </div>
                     </div>
 
-                    <div id="events-list" class="row row-cols-1 row-cols-xxl-3 g-4"></div>
+                    <div id="events-list" class="row row-cols-1 row-cols-xxl-3 g-4" style="padding-bottom: 5vh;"></div>
 
                     <div aria-live="assertive" aria-atomic="true" class="d-flex position-absolute top-50 start-50 translate-middle"><!-- justify-content-center align-items-center w-100 -->
                         <div id="confirm-toast" class="toast" role="alert" aria-live="assertive" aria-atomic="true">
