--- a/assets/html/home.html
+++ b/assets/html/home.html
@@ -131,30 +131,12 @@
                     <div class="my-3 p-3 bg-body rounded shadow-lg">
                         <h2 class="border-bottom pb-2 mb-3" >Eventi in programma</h2>
                     </div>
-                    <div class="row row-cols-1 row-cols-xxl-3 g-4">
-                        <div class="col">
-                            <div class="card text-center shadow-lg h-100" style="width: 18rem;">
-                                <div class="card-body">
-                                    <h5 class="card-title">Nome evento</h5>
-                                    <p class="card-text">
-                                        Descrizione evento.
-                                    </p>
-                                </div>
-                                <ul class="list-group list-group-flush">
-                                    <li class="list-group-item">Inizio: dd/mm/yyyy - hh:mm</li>
-                                    <li class="list-group-item">Fine: dd/mm/yyyy - hh:mm</li>
-                                    <li class="list-group-item">Volontari assegnati: X</li>
-                                </ul>
-                                <div class="card-body">
-                                    <a href="#" class="btn btn-primary">Vedi evento</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+                    <div id="events-list" class="row row-cols-1 row-cols-xxl-3 g-4" style="padding-bottom: 5vh;"></div>
                 </div>
             </div>
 
         <script src="../../node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
         <script src="../../node_modules/jquery/dist/jquery.min.js"></script>
+        <script src="../js/home.js"></script>
     </body>
 </html>
