--- a/assets/html/add-event.html
+++ b/assets/html/add-event.html
@@ -186,7 +186,7 @@
                             <div class="col-1"></div>
                             <div id="add-users-btn-field" class="col">
                                 <div data-bs-trigger="hover" data-bs-toggle="tooltip" data-bs-placement="top" data-bs-custom-class="custom-tooltip" data-bs-title="Per poter scegliere i volontari bisogna prima impostare data e ora di inizio e fine evento.">
-                                    <button id="add-users" class="w-100 btn btn-success btn-lg" type="button" disabled>Aggiungi partecipanti</button>
+                                    <button id="add-users" class="w-100 btn btn-success btn-lg" type="button" data-bs-toggle="modal" data-bs-target="#filter-selection" disabled>Aggiungi partecipanti</button>
                                 </div>
                             </div>
                             <div class="col-1"></div>
@@ -245,91 +245,98 @@
                         </div>
                     </div>
 
-                    <div id="filter-selection" class="card position-absolute top-50 start-50 translate-middle" style="width: 60rem;">
-                        <div class="my-3 p-3 card-body position-relative">
-                            <button id="close-filter-selection" type="button" class="px-4 position-absolute top-0 end-0 btn-close" aria-label="Close"></button>
-                            <div class="row">
-                                <div class="col">
-                                    <label class="col-form-label">Sesso:</label>
-                                    <select class="form-select" id="sex">
-                                        <option value="undefined" selected>Qualunque</option>
-                                        <option value="F">F</option>
-                                        <option value="M">M</option>
-                                    </select>
+                    <div id="filter-selection" class="modal fade" tabindex="-1" aria-labelledby="filter-selection-title" aria-hidden="true">
+                        <div class="modal-dialog">
+                            <div class="modal-content position-absolute start-50 translate-middle-x" style="width: 60rem;">
+                                <div class="modal-header">
+                                    <h1 class="modal-title fs-5" id="filter-selection-title">Aggiugni volontari</h1>
+                                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                                 </div>
-                                <div class="col">
-                                    <label class="col-form-label">Incarico:</label>
-                                    <select class="form-select" id="role" required>
-                                        <option value="undefined" selected>Qualunque</option>
-                                        <option value="Volontario">Volontario</option>
-                                        <option value="Barelliere">Barelliere</option>
-                                        <option value="Soccorritore">Soccorritore</option>
-                                        <option value="Assistente">Assistente</option>
-                                        <option value="Coordinatore">Coordinatore</option>
-                                    </select>
-                                </div>
-                                <div class="col">
-                                    <label class="col-form-label">Comune di residenza:</label>
-                                    <select class="form-select" id="city">
-                                        <option value="undefined" selected>Qualunque</option>
-                                        <option value="Avetrana">Avetrana</option>
-                                        <option value="Carosino">Carosino</option>
-                                        <option value="Castellaneta">Castellaneta</option>
-                                        <option value="Crispiano">Crispiano</option>
-                                        <option value="Faggiano">Faggiano</option>
-                                        <option value="Fragagnano">Fragagnano</option>
-                                        <option value="Ginosa">Ginosa</option>
-                                        <option value="Grottaglie">Grottaglie</option>
-                                        <option value="Laterza">Laterza</option>
-                                        <option value="Leporano">Leporano</option>
-                                        <option value="Lizzano">Lizzano</option>
-                                        <option value="Manduria">Manduria</option>
-                                        <option value="Martina Franca">Martina Franca</option>
-                                        <option value="Maruggio">Maruggio</option>
-                                        <option value="Massafra">Massafra</option>
-                                        <option value="Monteiasi">Monteiasi</option>
-                                        <option value="Montemesola">Montemesola</option>
-                                        <option value="Monteparano">Monteparano</option>
-                                        <option value="Mottola">Mottola</option>
-                                        <option value="Palagianello">Palagianello</option>
-                                        <option value="Palagiano">Palagiano</option>
-                                        <option value="Pulsano">Pulsano</option>
-                                        <option value="Roccaforzata">Roccaforzata</option>
-                                        <option value="San Giorgio Ionico">San Giorgio Ionico</option>
-                                        <option value="San Marzano di San Giuseppe">San Marzano di San Giuseppe</option>
-                                        <option value="Sava">Sava</option>
-                                        <option value="Statte">Statte</option>
-                                        <option value="Taranto">Taranto</option>
-                                        <option value="Torricella">Torricella</option>
-                                    </select>
-                                </div>
-                            </div>
-                            <div class="row p-3">
-                                <div class="col">
-                                    <table class="table">
-                                        <tbody class="table-group-divider">
-                                            <tr>
-                                                <td colspan="7">
-                                                    <div style="overflow-y: scroll; height: 300px;">
-                                                        <table class="table">
-                                                            <thead>
-                                                                <tr>
-                                                                    <th scope="col">ID</th>
-                                                                    <th scope="col">Nome</th>
-                                                                    <th scope="col">Cognome</th>
-                                                                    <th scope="col">Codice fiscale</th>
-                                                                    <th scope="col">Città</th>
-                                                                    <th scope="col">Incarico</th>
-                                                                    <th scope="col"></th>
-                                                                </tr>
-                                                            </thead>
-                                                            <tbody id="filtered-users-list"></tbody>
-                                                        </table>
-                                                    </div>
-                                                </td>
-                                            </tr>
-                                        </tbody>
-                                    </table>
+                                <div class="modal-body">
+                                    <div class="row">
+                                        <div class="col">
+                                            <label class="col-form-label">Sesso:</label>
+                                            <select class="form-select" id="sex">
+                                                <option value="undefined" selected>Qualunque</option>
+                                                <option value="F">F</option>
+                                                <option value="M">M</option>
+                                            </select>
+                                        </div>
+                                        <div class="col">
+                                            <label class="col-form-label">Incarico:</label>
+                                            <select class="form-select" id="role" required>
+                                                <option value="undefined" selected>Qualunque</option>
+                                                <option value="Volontario">Volontario</option>
+                                                <option value="Barelliere">Barelliere</option>
+                                                <option value="Soccorritore">Soccorritore</option>
+                                                <option value="Assistente">Assistente</option>
+                                                <option value="Coordinatore">Coordinatore</option>
+                                            </select>
+                                        </div>
+                                        <div class="col">
+                                            <label class="col-form-label">Comune di residenza:</label>
+                                            <select class="form-select" id="city">
+                                                <option value="undefined" selected>Qualunque</option>
+                                                <option value="Avetrana">Avetrana</option>
+                                                <option value="Carosino">Carosino</option>
+                                                <option value="Castellaneta">Castellaneta</option>
+                                                <option value="Crispiano">Crispiano</option>
+                                                <option value="Faggiano">Faggiano</option>
+                                                <option value="Fragagnano">Fragagnano</option>
+                                                <option value="Ginosa">Ginosa</option>
+                                                <option value="Grottaglie">Grottaglie</option>
+                                                <option value="Laterza">Laterza</option>
+                                                <option value="Leporano">Leporano</option>
+                                                <option value="Lizzano">Lizzano</option>
+                                                <option value="Manduria">Manduria</option>
+                                                <option value="Martina Franca">Martina Franca</option>
+                                                <option value="Maruggio">Maruggio</option>
+                                                <option value="Massafra">Massafra</option>
+                                                <option value="Monteiasi">Monteiasi</option>
+                                                <option value="Montemesola">Montemesola</option>
+                                                <option value="Monteparano">Monteparano</option>
+                                                <option value="Mottola">Mottola</option>
+                                                <option value="Palagianello">Palagianello</option>
+                                                <option value="Palagiano">Palagiano</option>
+                                                <option value="Pulsano">Pulsano</option>
+                                                <option value="Roccaforzata">Roccaforzata</option>
+                                                <option value="San Giorgio Ionico">San Giorgio Ionico</option>
+                                                <option value="San Marzano di San Giuseppe">San Marzano di San Giuseppe</option>
+                                                <option value="Sava">Sava</option>
+                                                <option value="Statte">Statte</option>
+                                                <option value="Taranto">Taranto</option>
+                                                <option value="Torricella">Torricella</option>
+                                            </select>
+                                        </div>
+                                    </div>
+                                    <div class="row p-3">
+                                        <div class="col">
+                                            <table class="table">
+                                                <tbody class="table-group-divider">
+                                                    <tr>
+                                                        <td colspan="7">
+                                                            <div style="overflow-y: scroll; height: 300px;">
+                                                                <table class="table">
+                                                                    <thead>
+                                                                        <tr>
+                                                                            <th scope="col">ID</th>
+                                                                            <th scope="col">Nome</th>
+                                                                            <th scope="col">Cognome</th>
+                                                                            <th scope="col">Codice fiscale</th>
+                                                                            <th scope="col">Città</th>
+                                                                            <th scope="col">Incarico</th>
+                                                                            <th scope="col"></th>
+                                                                        </tr>
+                                                                    </thead>
+                                                                    <tbody id="filtered-users-list"></tbody>
+                                                                </table>
+                                                            </div>
+                                                        </td>
+                                                    </tr>
+                                                </tbody>
+                                            </table>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
