can now export as a CSV file the views of filtered users and events.

--- a/assets/html/events.html
+++ b/assets/html/events.html
@@ -161,6 +161,7 @@
                                     </div>
                                     <div class="modal-footer">
                                         <button id="confirm-search-event" class="w-100 btn btn-outline-success btn-lg" type="button" data-bs-dismiss="modal">Filtra eventi</button>
+                                        <a id="export-events-view" href="../csv/events-view.csv" download="events-view.csv" class="w-100 btn btn-outline-info btn-lg">Esporta eventi</a>
                                     </div>
                                 </div>
                             </div>
