--- a/assets/html/users.html
+++ b/assets/html/users.html
@@ -201,6 +201,7 @@
                                     </div>
                                     <div class="modal-footer">
                                         <button id="confirm-search-user" class="w-100 btn btn-outline-success btn-lg" type="button" data-bs-dismiss="modal">Filtra volontari</button>
+                                        <a id="export-users-view" href="../csv/users-view.csv" download="users-view.csv" class="w-100 btn btn-outline-info btn-lg">Esporta volontari</a>
                                     </div>
                                 </div>
                             </div>
