added name and surname as search parameters for users.

--- a/assets/html/modify-event.html
+++ b/assets/html/modify-event.html
@@ -257,13 +257,15 @@
                                 <div class="modal-body">
                                     <div class="row">
                                         <div class="col">
-                                            <label class="col-form-label">Sesso:</label>
-                                            <select class="form-select" id="sex">
-                                                <option value="undefined" selected>Qualunque</option>
-                                                <option value="F">F</option>
-                                                <option value="M">M</option>
-                                            </select>
+                                            <label class="col-form-label">Nome:</label>
+                                            <input type="text" class="form-control" id="user-name" placeholder="Nome">
                                         </div>
+                                        <div class="col">
+                                            <label class="col-form-label">Cognome:</label>
+                                            <input type="text" class="form-control" id="user-surname" placeholder="Cognome">
+                                        </div>
+                                    </div>
+                                    <div class="row">
                                         <div class="col">
                                             <label class="col-form-label">Incarico:</label>
                                             <select class="form-select" id="role" required>
