--- a/assets/html/users.html
+++ b/assets/html/users.html
@@ -141,6 +141,12 @@
                                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                                     </div>
                                     <div class="modal-body">
+                                        <label class="col-form-label">Nome:</label>
+                                        <input type="text" class="form-control" id="name" placeholder="Nome">
+
+                                        <label class="col-form-label">Cognome:</label>
+                                        <input type="text" class="form-control" id="surname" placeholder="Cognome">
+
                                         <label class="col-form-label">Stato:</label>
                                         <select class="form-select" id="status">
                                             <option value="undefined" selected>Qualunque</option>
